# Sliit

./: .gitignore  README.md  pyproject.toml
src/sliit_utils/: __init__.py  validation.py
tests/: test_validation.py
